# ASE-Coder

./: .gitignore  Makefile.am  Makefile.in  README.md  README.txt  aclocal.m4  ase.c  configure  configure.ac  mkinstalldirs
config/: config.h.in
filter/: blob-private.h  color-private.h  colormap-private.h  colorspace-private.h  image-private.h  nt-base-private.h  quantum-private.h
m4/: version.m4
